# Regulus

./: .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .ruff.toml  Makefile  README.md  RELEASE.md  mypy.ini  package.json  pnpm-lock.yaml  pytest.ini
docs/: architecture.mmd
infra/: docker-compose.yml
release-notes/: TEMPLATE.md
scripts/: demo.sh  (+5 more)
services/api/: .env.example  README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_init.py  0002_indexing.py  0003_graph.py  0004_embeddings.py  0005_metrics.py  0006_security.py
services/api/src/regulus_api/: __init__.py  main.py
services/api/src/regulus_api/api/v1/: blast.py  diff.py  graph.py  metrics.py  rag.py  repos.py  router.py  security.py
services/api/src/regulus_api/blast/: __init__.py  engine.py  history.py  tests.py
services/api/src/regulus_api/core/: config.py
services/api/src/regulus_api/db/: __init__.py  models.py  session.py
services/api/src/regulus_api/diff/: __init__.py  summarizer.py
services/api/src/regulus_api/graph/: __init__.py  builder.py  parsers.py  resolver.py
services/api/src/regulus_api/indexing/: __init__.py  indexer.py
services/api/src/regulus_api/jobs/: queue.py  tasks.py
services/api/src/regulus_api/metrics/: __init__.py  calculations.py  compute.py  git_history.py
services/api/src/regulus_api/rag/: explain.py  provider.py  retriever.py
services/api/src/regulus_api/security/: __init__.py  runner.py
services/api/tests/: conftest.py  test_blast_radius.py  test_graph_parsing.py
(+32 files in other folders)
